[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/typing_defense.gd" id="1"]

[node name="TypingDefense" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.06, 0.12, 1)

[node name="BattleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 120.0
offset_right = -50.0
offset_bottom = -200.0

[node name="Castle" type="Panel" parent="BattleArea"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0

[node name="CastleLabel" type="Label" parent="BattleArea/Castle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
text = "CASTLE"

[node name="EnemyLane" type="Control" parent="BattleArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 12.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_constants/separation = 40

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wave 1"

[node name="HPLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "Castle HP: 10/10"

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Gold: 0"

[node name="LessonLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
text = "Lesson: Home Row"

[node name="StatsBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 56.0
offset_right = 600.0
offset_bottom = 84.0
theme_override_constants/separation = 30

[node name="WPMLabel" type="Label" parent="StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 1)
text = "WPM: 0"

[node name="AccuracyLabel" type="Label" parent="StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
text = "Accuracy: 100%"

[node name="ComboLabel" type="Label" parent="StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
text = "Combo: 0"

[node name="PowerLabel" type="Label" parent="StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.5, 0.8, 1)
text = "Power: 1.0x"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1100.0
offset_top = 12.0
offset_right = 1180.0
offset_bottom = 44.0
text = "Menu"

[node name="TypingPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -180.0
offset_right = 400.0
offset_bottom = -20.0

[node name="VBox" type="VBoxContainer" parent="TypingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 12.0
offset_right = -20.0
offset_bottom = -12.0
theme_override_constants/separation = 8

[node name="PromptLabel" type="Label" parent="TypingPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Type the word to attack:"
horizontal_alignment = 1

[node name="WordDisplay" type="RichTextLabel" parent="TypingPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center][color=yellow]attack[/color][/center]"
fit_content = true
scroll_active = false

[node name="TypedDisplay" type="Label" parent="TypingPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
text = ""
horizontal_alignment = 1

[node name="InputField" type="LineEdit" parent="TypingPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Type here..."
alignment = 1

[node name="FeedbackLabel" type="Label" parent="TypingPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
text = "Press Enter to confirm, or keep typing for auto-complete"
horizontal_alignment = 1

[node name="EnemyQueue" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 100.0
offset_right = 1180.0
offset_bottom = 400.0
theme_override_constants/separation = 8

[node name="QueueTitle" type="Label" parent="EnemyQueue"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "INCOMING ENEMIES:"

[node name="QueueList" type="RichTextLabel" parent="EnemyQueue"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
bbcode_enabled = true
text = "1. raider (HP: 3)
2. scout (HP: 2)
3. brute (HP: 5)"
scroll_active = false

[node name="WaveProgress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 90.0
offset_right = -300.0
offset_bottom = 105.0
value = 30.0
show_percentage = false
